syntax = "proto3";

package api;
option go_package = "gitlab.ozon.dev/Bdido86/movie-tickets/pkg/api;api";

//message Pokemon {
//  string id = 1;
//  string pid = 2;
//  string name = 3;
//  string power = 4;
//  string description = 5;
//}

message UserAuthRequest {
  string name = 1;
}
message UserAuthResponse {
  string token = 1;
}


service Cinema {
  rpc UserAuth (UserAuthRequest) returns (UserAuthResponse);
}